Added section for commit summary explanation

--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <!DOCTYPE html>
+<!-- 
+	
+	DETAILS OF THIS COMMIT
+
+	Since this is my first project learning game dev,
+	I added this section to summarize what the changes does each commit
+
+-->
 <html>
 	<head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
