--- a/index.html
+++ b/index.html
@@ -3,14 +3,18 @@
 	
 	DETAILS OF THIS COMMIT
 
-	Added the area that will contain the javascript code
-	Added startGame function that would ask the myGameArea object to append the canvas to the html body
-	Added a link to html body tag that will tell it to run the startGame function onload
+	Added some styling to make canvas more noticeable 
 
 -->
 <html>
 	<head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+		<style>
+			canvas {
+				border:1px solid #d3d3d3;
+				background-color: #f1f1f1;
+			}
+		</style>
 	</head>
 	<body onload="startGame()">
 	
